--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,3 +1,5 @@
+hide_download: true
+hide_download_original: null
 leftnav:
 - identifier: a8dd8c76-c055-4dcc-bb94-64f649d856dc
   name: Online Publication
